# Phantasy

./: pyproject.toml
notebooks/: animatelcm.ipynb  open_sora_gradio.ipynb
src/phantasy/: animate_lcm.py
src/phantasy/open_sora/: app.py  osapi_doc.md
src/phantasy/open_sora/configs/inference/: sample.py
src/phantasy/siteapi/: app.py
