[tool.poetry]
name = "phantasy"
version = "0.1.0"
description = ""
authors = ["Dheemanth Manur <dheemanthmanur72@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
pydantic = "^2.7.4"
uvicorn = "^0.30.1"
torch = "2.2.2"
torchvision = "0.17.2"
xformers = "0.0.25.post1"
opensora = {git = "https://github.com/hpcaitech/Open-Sora.git", rev = "v1.2.0"}
packaging = "^24.1"
ninja = "^1.11.1.1"
gradio = "^4.38.1"
spaces = "^0.28.3"
numpy = "1.26.4"
gradio-client = "^1.1.0"


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
